# wireguard

./: README.md
.github/workflows/: code.yml  dh-code.yml  model.yml  wireguard-code.yml  workflow.yml
dh/faulty-go-implementation/: README.md  go.mod
dh/go-implementation/: README.md  go.sum  main.go
dh/java-implementation/: README.md  build.gradle
dh/model/: README.md  dh.spthy
implementation/: README.md  go.sum  main.go
implementation/device/: device.go  keypair.go  noise-helpers.go  noise-types.go  receive.go  send.go
implementation/docker/: Dockerfile  test.sh  verify.sh
implementation/endpoint/: standard-io.go  tun.go
implementation/initiator/: forwarding.go  handshake.go  main.go  state.go
implementation/responder/: main.go  (+3 more)
model/: README.md  wireguard.oracle  wireguard.spthy
specification-generator/: README.md
specification-generator/src/lib/tamigloo-compiler/: tamigloo-compiler.cabal
specification-generator/src/lib/tamigloo-compiler/src/: DerivingInstances.hs  TamarinToTamigloo.hs  TamiglooConfig.hs
specification-generator/src/lib/tamigloo-compiler/src/PrettyIOSpecs/: CommonFunctions.hs
specification-generator/src/lib/tamigloo-compiler/src/PrettyIOSpecs/Gobra/: Content.hs  FactEncoding.hs  IOSpecs.hs  PermissionEncoding.hs  TermEncoding.hs  Utils.hs
specification-generator/src/lib/tamigloo-compiler/src/PrettyIOSpecs/VeriFast/: Content.hs  FactEncoding.hs  IOSpecs.hs  MultiSetEncoding.hs  PermissionEncoding.hs  TermEncoding.hs  Utils.hs
specification-generator/src/lib/tamigloo-compiler/src/isabelleGeneratedCode/: Arith.hs  Decomposition.hs  ForeignImports.hs  GenericHelperFunctions.hs  HOL.hs  InterfaceModel.hs  IoSpecs.hs  List.hs  Option.hs  Orderings.hs  Product_Type.hs  ProtocolFormat.hs  Restrictions.hs  TamiglooDatatypes.hs
tamarin-docker/: Dockerfile  verify-dh.sh  verify-wireguard.sh
(+113 files in other folders)
